--- a/requirements.txt
+++ b/requirements.txt
@@ -5,3 +5,6 @@ pydantic[email]==2.5.0
 python-multipart==0.0.6
 pytest==7.4.3
 httpx==0.25.2
+propelauth-py==3.1.7
+injector==0.21.0
+python-dotenv==1.0.0
